--- a/website/src/app.css
+++ b/website/src/app.css
@@ -11,19 +11,24 @@
     
     .navbox{
         box-sizing: border-box;
-        padding: 0;
+        padding-top: 5px;
         margin: 0;
     }
     
     body {
         font-family: 'Josefin Sans', sans-serif;
-        padding: 0;
-        margin: 0;
+        background-image: url('./images/unnamed.png');
+        background-size: cover;
+        height: 100%;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-color: rgb(3, 3, 56);
+
     }
     
-    .navbar {
+    .navbarz {
         font-size: 18px;
-        background-color: black;
+        background-color: rgb(15, 15, 15);
         margin: 0;
         padding: 0;
         border: 0px;
