--- a/website/src/component/general.css
+++ b/website/src/component/general.css
@@ -161,7 +161,8 @@ width: 80%;
     flex-direction: row;
     margin: 20% 0 20% 0;
     color: rgb(221, 219, 219);
-    width: 90%;
+    width: 95%;
+    background-color: rgba(128, 128, 128, 0.541);
 }
 
 .edu-osa{
@@ -170,16 +171,18 @@ width: 80%;
     margin: 20% 0 20% 0;
     color: rgb(221, 219, 219);
     width: 90%;
+    background-color: rgba(128, 128, 128, 0.541);
 }
 
 .Edu-sec-title{
-    font-size: 4vw;
-    margin-left: 5%;
+    font-size: 5vw;
+    width: 100%;
+    margin: 10%;
 }
 
 .Edu-sec-text{
-    font-size: 3vw;
-    margin-left: 5%;
+    font-size: 4vw;
+    margin: 10%;
 }
 
 .edu-main{
@@ -216,21 +219,27 @@ width: 80%;
     margin: 0 5% 0 5%;
     display:flex;
     flex-direction: column;
+    align-items: center;
     color: rgb(221, 219, 219);
+    background-color: rgba(128, 128, 128, 0.500);
+    width: 95%;
 }
 
 .exp_sec1_text{
     
     display: flex;
     flex-direction: column;
+    width: 95%;
 }
 
 .exp_sectitle{
-    font-size: 4vw;
+    font-size: 5vw;
+    margin-top: 5%;
 }
 
 .exp_sectext{
-    font-size: 3vw;
+    font-size: 4vw;
+    width: 95%;
 }
 
 .exp_sec3{
@@ -240,5 +249,6 @@ width: 80%;
     color: rgb(221, 219, 219);
     align-items: center;
     margin: 10% 0 10% 0;
-    width: 90%;
+    width: 95%;
+    background-color: rgba(128, 128, 128, 0.500);
 }
