--- a/website/src/component/general.css
+++ b/website/src/component/general.css
@@ -158,6 +158,63 @@ img {
         border: 1px rgb(221, 219, 219) solid;
         margin-bottom: 50%;
     }
+
+    .exp_title{
+        margin: 60% 0 60% 0;
+    }
+    
+    .exp_title_text{
+        font-size: 7vw;
+        color:rgb(221, 219, 219);
+    }
+    
+    .exp_logo{
+        width: 35%;
+        margin: 5% 0 5% 0;
+    }
+    
+    .exp_sec1{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgb(221, 219, 219);
+        background-color: rgba(128, 128, 128, 0.500);
+        width: 95%;
+    }
+    
+    .exp_sec1_text{
+        
+        display: flex;
+        flex-direction: column;
+        width: 95%;
+    }
+    
+    .exp_sectitle{
+        font-size: 5vw;
+        margin-top: 5%;
+    }
+    
+    .exp_sectext{
+        font-size: 4vw;
+        width: 95%;
+    }
+    
+    .exp_sec3{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        color: rgb(221, 219, 219);
+        align-items: center;
+        margin: 10% 0 10% 0;
+        width: 95%;
+        background-color: rgba(128, 128, 128, 0.500);
+    }
+
+    .exp_img_text{
+        font-size: 3vw;
+        margin-top: 5%;
+    }
 }
 
 
@@ -241,6 +298,63 @@ img {
         border: 1px rgb(221, 219, 219) solid;
         margin-bottom: 20%;
     }
+
+    .exp_title{
+        margin: 35vh 0 35vh 0;
+    }
+    
+    .exp_title_text{
+        font-size: 6vw;
+        color:rgb(221, 219, 219);
+    }
+    
+    .exp_logo{
+        width: 35%;
+        margin: 5% 0 5% 0;
+    }
+    
+    .exp_sec1{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgb(221, 219, 219);
+        background-color: rgba(128, 128, 128, 0.500);
+        width: 75%;
+    }
+    
+    .exp_sec1_text{
+        
+        display: flex;
+        flex-direction: column;
+        width: 95%;
+    }
+    
+    .exp_sectitle{
+        font-size: 3vw;
+        margin-top: 5%;
+    }
+    
+    .exp_sectext{
+        font-size: 2vw;
+        width: 95%;
+    }
+    
+    .exp_sec3{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        color: rgb(221, 219, 219);
+        align-items: center;
+        margin: 10% 0 10% 0;
+        width: 75%;
+        background-color: rgba(128, 128, 128, 0.500);
+    }
+
+    .exp_img_text{
+        font-size: 3vw;
+        margin-top: 5%;
+    }
 }
 
 @media screen and (min-width: 1401px) {
@@ -320,6 +434,64 @@ img {
         border: 1px rgb(221, 219, 219) solid;
         margin-bottom: 20%;
     }
+
+    .exp_title{
+        margin: 35vh 0 35vh 0;
+    }
+    
+    .exp_title_text{
+        font-size: 5vw;
+        color:rgb(221, 219, 219);
+    }
+    
+    .exp_logo{
+        width: 35%;
+        margin: 5% 0 5% 0;
+    }
+    
+    .exp_sec1{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgb(221, 219, 219);
+        background-color: rgba(128, 128, 128, 0.500);
+        width: 75%;
+    }
+    
+    .exp_sec1_text{
+        
+        display: flex;
+        flex-direction: column;
+        width: 95%;
+    }
+    
+    .exp_sectitle{
+        font-size: 2.5vw;
+        margin-top: 5%;
+    }
+    
+    .exp_sectext{
+        font-size: 1.5vw;
+        width: 95%;
+        margin-top: 5%;
+    }
+    
+    .exp_sec3{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        color: rgb(221, 219, 219);
+        align-items: center;
+        margin: 10% 0 10% 0;
+        width: 75%;
+        background-color: rgba(128, 128, 128, 0.500);
+    }
+
+    .exp_img_text{
+        font-size: 1vw;
+        margin-top: 5%;
+    }
 }
 
 .contact{
@@ -378,56 +550,4 @@ width: 80%;
     height: 100%;
     width: 100%;
     font-family: 'Baloo Tammudu 2', sans-serif;
-}
-
-.exp_title{
-    margin: 60% 0 60% 0;
-}
-
-.exp_title_text{
-    font-size: 7vw;
-    color:rgb(221, 219, 219);
-}
-
-.exp_logo{
-    width: 35%;
-    margin: 5% 0 5% 0;
-}
-
-.exp_sec1{
-    margin: 0 5% 0 5%;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgb(221, 219, 219);
-    background-color: rgba(128, 128, 128, 0.500);
-    width: 95%;
-}
-
-.exp_sec1_text{
-    
-    display: flex;
-    flex-direction: column;
-    width: 95%;
-}
-
-.exp_sectitle{
-    font-size: 5vw;
-    margin-top: 5%;
-}
-
-.exp_sectext{
-    font-size: 4vw;
-    width: 95%;
-}
-
-.exp_sec3{
-    margin: 0 5% 0 5%;
-    display:flex;
-    flex-direction: column;
-    color: rgb(221, 219, 219);
-    align-items: center;
-    margin: 10% 0 10% 0;
-    width: 95%;
-    background-color: rgba(128, 128, 128, 0.500);
 }
