--- a/website/src/app.css
+++ b/website/src/app.css
@@ -29,7 +29,6 @@
     }
     
     .navbarz {
-        font-size: 18px;
         background-color: rgb(15, 15, 15);
         margin: 0;
         padding: 0;
@@ -75,21 +74,13 @@
         display: none;
     }
     
-    .navbar-toggle{
-        position: absolute;
-        top: 10px;
-        right: 20px;
-        cursor: pointer; 
-        color: rgba(255,255,255,0.8);
-        font-size: 24px;
-    }
-    
     .fontawesometoggle{
         color: white;
         position: absolute;
-        top: 3px;
+        top: 0;
         right: 5px;
         cursor: pointer;
+        font-size: 8.5vw;
     
     }
     
@@ -115,18 +106,34 @@
       }
     }
 
-@media screen and (min-width: 601px) and (max-width: 1400px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
     .linkzz {
         text-align: center;
         padding-top: 4px;
         padding-bottom: 4px;
-        font-size: 2vw;
+        font-size: 18px;
     }
 
     .logo{
         color: white;
         padding-bottom: 5px;
-        font-size: 3vw;
+        font-size: 24px;
+        width: 22vw;
+    }
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1400px) {
+    .linkzz {
+        text-align: center;
+        padding-top: 4px;
+        padding-bottom: 4px;
+        font-size: 20px;
+    }
+
+    .logo{
+        color: white;
+        padding-bottom: 5px;
+        font-size: 28px;
         width: 20vw;
     }
 }
@@ -136,13 +143,13 @@
         text-align: center;
         padding-top: 4px;
         padding-bottom: 4px;
-        font-size: 1.5vw;
+        font-size: 24px;
     }
 
     .logo{
         color: white;
         padding-bottom: 5px;
-        font-size: 2.5vw;
+        font-size: 32px;
         width: 20vw;
     }
 }
@@ -211,15 +218,6 @@
 
     .overlayMenu{
         display: none;
-    }
-    
-    .navbar-toggle{
-        position: absolute;
-        top: 10px;
-        right: 20px;
-        cursor: pointer; 
-        color: rgba(255,255,255,0.8);
-        font-size: 24px;
     }
     
     .fontawesometoggle{
