--- a/website/src/component/general.css
+++ b/website/src/component/general.css
@@ -9,7 +9,7 @@ img {
     height: auto;
     width: 100%;
     display: flex;
-    margin-top: 10%;
+    margin-top: 5vh;
     margin-bottom: 5%;
     flex-direction: column;
 
@@ -25,13 +25,6 @@ img {
 
 }
 
-.pic2{
-    width: 80%;
-    height: auto;
-    position: relative;
-    text-align: center;
-    margin: 20% 0 20% 0;
-}
 .NameMe{
     text-align: center;
     padding-top: 10px;
@@ -106,6 +99,14 @@ img {
         position: absolute;
     }
 
+    .education_title{
+        text-align: center;
+        font-size: 8vw;
+        color: rgb(221, 219, 219);
+        margin: 0;
+        top: 40%;
+    }
+
     .edu-uoft{
         display: flex;
         flex-direction: row;
@@ -113,6 +114,14 @@ img {
         color: rgb(221, 219, 219);
         width: 95%;
         background-color: rgba(128, 128, 128, 0.541);
+    }
+
+    .pic_uoft{
+        width:25%;
+        border: 0.5px black solid;
+        height: 40%;
+        margin-top: 10%;
+        margin-left: 5%;
     }
     
     .edu-osa{
@@ -211,6 +220,14 @@ img {
         margin-top: 5%;
     }
 
+    .pic2{
+        width: 80%;
+        height: auto;
+        position: relative;
+        text-align: center;
+        margin: 20% 0 20% 0;
+    }
+
     .carousel{
 
         width: 100vw;
@@ -232,6 +249,7 @@ img {
 
     .about-sec-title{
         font-size: 8vw;
+        margin: 10%;
     }
 
     .about_myself{
@@ -255,8 +273,28 @@ img {
     }
 }
 
-@media screen and (min-width: 601px) and (max-width: 1400px) {
-    
+@media screen and (min-width: 601px) and (max-width: 1000px){
+    .about-carousel-container{
+        margin: 20vh 0 20vh 0;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .NameMe{
+        font-size: 12vw;
+        margin: 5% 0 5% 0;
+    }
+
+    .TitleMe{
+        font-size: 10vw;
+    }
+
+    .contact{
+        margin: 10% 0 15% 0;
+    }
+
     .HomeComponent{
         width: auto;
         height: auto;
@@ -273,6 +311,14 @@ img {
         color: rgb(182, 182, 181);
     }
 
+    .education_title{
+        text-align: center;
+        font-size: 8vw;
+        color: rgb(221, 219, 219);
+        margin: 0;
+        top: 40%;
+    }
+
     .edu-uoft{
         display: flex;
         flex-direction: row;
@@ -280,6 +326,14 @@ img {
         color: rgb(221, 219, 219);
         width: 75%;
         background-color: rgba(128, 128, 128, 0.541);
+    }
+
+    .pic_uoft{
+        width:25%;
+        border: 0.5px black solid;
+        height: 40%;
+        margin-top: 10%;
+        margin-left: 5%;
     }
 
     .pic_osa{
@@ -372,6 +426,7 @@ img {
         width: 75%;
         background-color: rgba(128, 128, 128, 0.500);
     }
+    
 
     .exp_img_text{
         font-size: 3vw;
@@ -395,6 +450,7 @@ img {
 
     .about-sec-title{
         font-size: 5vw;
+        margin: 10%
     }
 
     .about_myself{
@@ -413,32 +469,17 @@ img {
         width: 75%;
     }
 
+    .pic2{
+        width: 80%;
+        height: auto;
+        position: relative;
+        text-align: center;
+        margin: 20% 0 20% 0;
+    }
+
     .interests{
         font-family: 'Anton', sans-serif;
         font-size: 3vw;
-    }
-}
-
-@media screen and (min-width: 601px) and (max-width: 1000px){
-    .about-carousel-container{
-        margin: 20vh 0 20vh 0;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-
-    }
-
-    .NameMe{
-        font-size: 12vw;
-        margin: 5% 0 5% 0;
-    }
-
-    .TitleMe{
-        font-size: 10vw;
-    }
-
-    .contact{
-        margin: 10% 0 15% 0;
     }
 }
 
@@ -451,15 +492,203 @@ img {
     }
 
     .NameMe{
-        font-size: 12vw;
+        font-size: 120px;
     }
 
     .TitleMe{
-        font-size: 10vw;
+        font-size: 80px;
     }
 
     .contact{
         margin: 5% 0 15% 0;
+    }
+
+    .HomeComponent{
+        width: 80%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 4;
+        font-family: 'Comfortaa', sans-serif;
+        margin:auto; 
+        position: absolute;
+        top: 10vh; bottom: 10vh;
+        right: 0; left: 0;
+    
+        align-items: center;
+        color: rgb(182, 182, 181);
+    }
+
+    .education_title{
+        text-align: center;
+        font-size: 70px;
+        color: rgb(221, 219, 219);
+        margin: 0;
+        top: 40%;
+    }
+
+    .edu-uoft{
+        display: flex;
+        flex-direction: row;
+        margin: 20% 0 20% 0;
+        color: rgb(221, 219, 219);
+        width: 75%;
+        background-color: rgba(128, 128, 128, 0.541);
+    }
+
+    .pic_uoft{
+        width:25%;
+        border: 0.5px black solid;
+        height: 40%;
+        margin: 5%;
+    }
+
+    .pic_osa{
+        width: 20%; 
+        border: 1px black solid;
+        height: 40%;
+        margin: 5%;
+    }
+    
+    .edu-osa{
+        display: flex;
+        flex-direction: row;
+        margin: 20% 0 20% 0;
+        color: rgb(221, 219, 219);
+        width: 75%;
+        background-color: rgba(128, 128, 128, 0.541);
+    }
+    
+    .Edu-sec-title{
+        font-size: 25px;
+        width: 100%;
+        margin: 5vh 3vh 3vh 3vh;
+    }
+    
+    .Edu-sec-text{
+        font-size: 18px;
+        margin: 3vh;
+    }
+    
+    .edu-main{
+        margin-top: 35vh;
+        margin-bottom: 35vh;
+    }
+
+    .edu_divider{
+        width: 100%;
+        border: 1px rgb(221, 219, 219) solid;
+        margin-bottom: 20%;
+    }
+
+    .exp_title{
+        margin: 25vh 0 25vh 0;
+    }
+    
+    .exp_title_text{
+        font-size: 50px;
+        color:rgb(221, 219, 219);
+    }
+    
+    .exp_logo{
+        width: 35%;
+        margin: 5% 0 5% 0;
+    }
+    
+    .exp_sec1{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgb(221, 219, 219);
+        background-color: rgba(128, 128, 128, 0.500);
+        width: 75%;
+    }
+    
+    .exp_sec1_text{
+        
+        display: flex;
+        flex-direction: column;
+        width: 95%;
+    }
+    
+    .exp_sectitle{
+        font-size: 30px;
+        margin-top: 5%;
+    }
+    
+    .exp_sectext{
+        font-size: 20px;
+        width: 95%;
+    }
+    
+    .exp_sec3{
+        margin: 0 5% 0 5%;
+        display:flex;
+        flex-direction: column;
+        color: rgb(221, 219, 219);
+        align-items: center;
+        margin: 10% 0 10% 0;
+        width: 75%;
+        background-color: rgba(128, 128, 128, 0.500);
+    }
+
+    .exp_img_text{
+        font-size: 20px;
+        margin-top: 5%;
+    }
+
+    .carousel{
+        width: 50vw;
+        height: 30vw;
+    }
+
+    .carousel-img{
+        height: 30vw;
+        width: 50vw;
+        border: 2px solid black;
+    }
+
+    .about-sec1{
+        width: 85%;
+    }
+
+    .about-sec-title{
+        font-size: 30px;
+        margin: 5vh;
+    }
+
+    .about_myself{
+        text-align: center;
+        width: 80%;
+        font-size: 20px;
+        margin: 0 10% 5% 10%;
+        background-color:rgba(128, 128, 128, 0.541);
+    }
+
+    .selfintrop2{
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 75%;
+    }
+
+    .interests{
+        font-family: 'Anton', sans-serif;
+        font-size: 20px;
+    }
+
+    .about_picme{
+        width: 70%;
+    }
+
+    .pic2{
+        width: 50%;
+        height: auto;
+        position: relative;
+        text-align: center;
+        margin: 5vh 0 5vh 0;
     }
 }
 
@@ -502,12 +731,23 @@ img {
         background-color: rgba(128, 128, 128, 0.541);
     }
 
+    .pic_uoft{
+        width:25%;
+        border: 0.5px black solid;
+        height: 40%;
+        margin: 5%;
+    }
+
     .pic_osa{
         width: 20%; 
         border: 1px black solid;
         height: 40%;
         margin-top: 10%;
         margin-left: 5%;
+    }
+
+    .pic_uoft{
+        margin-bottom: 5%;
     }
     
     .edu-osa{
@@ -611,7 +851,7 @@ img {
     }
 
     .about-carousel-container{
-        margin: 20vh 0 20vh 0;
+        margin: 15vh 0 15vh 0;
         align-items: center;
         display: flex;
         flex-direction: column;
@@ -644,6 +884,14 @@ img {
     .interests{
         font-family: 'Anton', sans-serif;
         font-size: 2vw;
+    }
+
+    .pic2{
+        width: 80%;
+        height: auto;
+        position: relative;
+        text-align: center;
+        margin: 7vh 0 7vh 0;
     }
 }
 
@@ -679,14 +927,6 @@ flex-direction: column;
 height: 100%;
 width: 100%;
 font-family: 'Baloo Tammudu 2', sans-serif;
-}
-
-.education_title{
-text-align: center;
-font-size: 8vw;
-color: rgb(221, 219, 219);
-margin: 0;
-top: 40%;
 }
 
 .breakln1{
