--- a/website/src/component/general.css
+++ b/website/src/component/general.css
@@ -796,7 +796,7 @@ img {
     }
     
     .exp_title_text{
-        font-size: 5vw;
+        font-size: 70px;
         color:rgb(221, 219, 219);
     }
     
@@ -823,12 +823,12 @@ img {
     }
     
     .exp_sectitle{
-        font-size: 2.5vw;
+        font-size: 26px;
         margin-top: 5%;
     }
     
     .exp_sectext{
-        font-size: 1.5vw;
+        font-size: 22px;
         width: 95%;
         margin-top: 5%;
     }
@@ -845,7 +845,7 @@ img {
     }
 
     .exp_img_text{
-        font-size: 1vw;
+        font-size: 16px;
         margin-top: 5%;
     }
 
